all view destroied I have no idea how to put it together ,only Fuck can help us Now

--- a/databaseProject/Views/Employees/Employee.cshtml
+++ b/databaseProject/Views/Employees/Employee.cshtml
@@ -1,53 +1,41 @@
-﻿@model PagedList.IPagedList<databaseProject.Models.Employee>
-@using PagedList.Mvc;
+﻿
+@model IEnumerable<databaseProject.Models.Employee>
 
-<link href="~/Content/PagedList.css" rel="stylesheet"   type="text/css" />
-     
+@{
+    ViewBag.Title = "employeeSalarySearch";
+}
 
-   
-<h2>Index</h2>
-
- page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)
-      of @Model.PageCount
-
-@Html.Label("search by id")
-@Html.TextBox("searchBox")
-<input id="searchBtn" type="button" onclick="search()" value="find Customer" />
-
-<div id="employee">
-
-</div>
-
+<h2>employeeSalarySearch</h2>
 
 
 <table class="table">
     <tr>
         <th>
-            Name
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            Salary
+            @Html.DisplayNameFor(model => model.Salary)
         </th>
         <th>
-           Birthday
+            @Html.DisplayNameFor(model => model.Birthday)
         </th>
         <th>
-           Address
+            @Html.DisplayNameFor(model => model.Address)
         </th>
         <th>
-            Phone
+            @Html.DisplayNameFor(model => model.Phone)
         </th>
         <th>
-            Email
+            @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
-           Sex
+            @Html.DisplayNameFor(model => model.Sex)
         </th>
         <th>
-           Specialization
+            @Html.DisplayNameFor(model => model.Contract_worker.Specialization)
         </th>
         <th>
-            Super_Id
+            @Html.DisplayNameFor(model => model.Office_worker.Super_Id)
         </th>
         <th></th>
     </tr>
@@ -90,29 +78,4 @@
         </tr>
     }
 
-</table
-
-            @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
-
-
-
-<script>
-    function search() {
-        var searchString = $("#searchBox").val();
-        $.ajax({
-            url: '/Employees/findEmployee',
-            contentType: 'application/html; charset=utf-8',
-            data: { passedString: searchString },
-            type: 'Get',
-            dataType: 'html'
-        })
-        .success(function (result) {
-
-            $('#employee').html(result);
-        })
-        .error(function (xhr, status) {
-            alert(status);
-        })
-
-    }
-</script>
+</table>
