--- a/databaseProject/Views/Shared/_Layout.cshtml
+++ b/databaseProject/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
                     <li>@Html.ActionLink("Search", "search", "Employees")</li>
+                    <li>@Html.ActionLink("Company", "Index", "Select")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
